--- a/lesson2.html
+++ b/lesson2.html
@@ -7,10 +7,10 @@
 <body>
 
 <script type="application/javascript" src="js/lesson2_1.js"></script>
-<!--<script type="application/javascript" src="js/lesson2_2.js"></script>-->
-<!--<script type="application/javascript" src="js/lesson2_3.js"></script>-->
-<!--<script type="application/javascript" src="js/lesson2_4.js"></script>-->
-<!--<script type="application/javascript" src="js/lesson2_5.js"></script>-->
-<!--<script type="application/javascript" src="js/lesson2_6.js"></script>-->
+<script type="application/javascript" src="js/lesson2_2.js"></script>
+<script type="application/javascript" src="js/lesson2_3.js"></script>
+<script type="application/javascript" src="js/lesson2_4.js"></script>
+<script type="application/javascript" src="js/lesson2_5.js"></script>
+<script type="application/javascript" src="js/lesson2_6.js"></script>
 </body>
 </html>
